# TsPy

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  build.ps1  install.ps1  watch_logs.ps1
examples/: README.md  auto_greeter.py
scripts/: tspy_init.py
scripts/examples/: audio_monitor.py  callsign_logger.py  hello_world.py
src/commands/: command_handler.c  command_handler.h
src/core/: plugin_config.c  plugin_config.h  plugin_interface.c  plugin_interface.h  plugin_main.c  plugin_main.h
src/events/: channel_events.c  channel_events.h  client_events.c  client_events.h  connection_events.c  connection_events.h
src/python/: python_api.c  python_api.h  python_engine.c  python_engine.h  python_events.c  python_events.h
src/ui/: hotkey_handler.c  hotkey_handler.h  menu_handler.c  menu_handler.h
src/utils/: logging.c  logging.h  string_utils.c  string_utils.h
